test fix picture not loading on safari

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -44,7 +44,7 @@ body {
 }
 
 .chauffeurbg {
-  background-image: url("/chauffeur.jpg");
+  background-image: url("/dogs.jpg");
   background-size: cover;
   background-position: center;
 }
